Spacing fixed: Guests

--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,7 @@ h6{
 
 #guests h2{
 	font-size: 48px;
+	margin: 0;
 }
 
 #guests img{
@@ -292,9 +293,13 @@ h6{
 #okc{
 	background-color: white;
 	width: 920px;
-	height: 258px;
+	height: 240px;
 	margin: 55px;
 	padding: 25px;
+}
+
+#okc img{
+	margin-top: 15px;
 }
 
 #accomodations{
@@ -305,15 +310,19 @@ h6{
 	padding: 25px;
 }
 
+#location1 p, #location2 p{
+	margin: 0 auto;
+}
+
 #location1{
 	width: 415px;
-	clear: both;
+	float: left;
 	margin: 0;
 }
 
 #location2{
 	width: 415px;
-	clear: both;
+	float: right;
 	margin: 0;
 }
 
@@ -321,8 +330,13 @@ h6{
 	background-color: white;
 	width: 920px;
 	height: 258px;
-	margin: 55px;
 	padding: 25px;
+	margin: 55px;
+}
+
+
+img.reg{
+	margin: 10px;
 }
 
 
